# CableLandingController-ROS2-pkg

./: CMakeLists.txt  README.md  package.xml
.figures/: CableLander_FSM.drawio  cable_landing_controller_state_machine(2).drawio  computational_system_diagram.drawio
codegen/: PresolveWorkingSet.cpp  PresolveWorkingSet.h  addBoundToActiveSetMatrix_.cpp  addBoundToActiveSetMatrix_.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  compressBounds.cpp  compressBounds.h  computeFirstOrderOpt.cpp  computeFirstOrderOpt.h  computeFval.cpp  computeFval.h  computeFval_ReuseHx.cpp  computeFval_ReuseHx.h  computeGrad_StoreHx.cpp  computeGrad_StoreHx.h  computeQ_.cpp  computeQ_.h  compute_deltax.cpp  compute_deltax.h  countsort.cpp  countsort.h  defines.txt  deleteColMoveEnd.cpp  deleteColMoveEnd.h  driver.cpp  driver.h  eye.cpp  eye.h  factorQR.cpp  factorQR.h  factorQRE.cpp  factorQRE.h  feasibleX0ForWorkingSet.cpp  feasibleX0ForWorkingSet.h  feasibleratiotest.cpp  feasibleratiotest.h  fullColLDL2_.cpp  (+56 more)
codegen/examples/: main.cpp  main.h
codegen/interface/: _coder_mpc_fun_api.cpp  _coder_mpc_fun_api.h  _coder_mpc_fun_info.cpp  _coder_mpc_fun_info.h  _coder_mpc_fun_mex.cpp  _coder_mpc_fun_mex.h
config/: params.yaml
launch/: double_cable_lander.launch.py  tf-sim.launch.py  u96v2-controller-real.launch.py  u96v2-controller-sim.launch.py  u96v2-pl-mapper-real.launch.py  u96v2-pl-mapper-sim.launch.py
rviz/: rviz_config.rviz  rviz_config_video.rviz
src/: blocking_queue.h  cable_drum_controller.cpp  cable_drum_controller.h  cable_landing_controller_sw.cpp  cable_landing_controller_sw.h  double_cable_lander.cpp  double_cable_lander.h  geometry.h  logger_node.cpp  trajectory_controller.cpp  trajectory_controller.h
src/CableDrumBridge/src/: xcabledrumbridge_hw.h
src/matlab_MPC_5Hz/: buildInfo.mat
src/old/pos_MPC_acc/: MPCStepFunction.cpp  MPCStepFunction.h  MPCStepFunction_data.cpp  MPCStepFunction_initialize.cpp  MPCStepFunction_initialize.h  MPCStepFunction_internal_types.h  MPCStepFunction_terminate.cpp  MPCStepFunction_terminate.h  PresolveWorkingSet.cpp  PresolveWorkingSet.h  RemoveDependentEq_.cpp  RemoveDependentEq_.h  RemoveDependentIneq_.cpp  RemoveDependentIneq_.h  addBoundToActiveSetMatrix_.cpp  addBoundToActiveSetMatrix_.h  buildInfo.mat  checkStoppingAndUpdateFval.cpp  checkStoppingAndUpdateFval.h  computeFirstOrderOpt.cpp  computeFirstOrderOpt.h  computeFval.cpp  computeFval.h  computeFval_ReuseHx.cpp  computeFval_ReuseHx.h  computeGrad_StoreHx.cpp  computeGrad_StoreHx.h  computeQ_.cpp  computeQ_.h  compute_deltax.cpp  compute_deltax.h  countsort.cpp  countsort.h  defines.txt  deleteColMoveEnd.cpp  deleteColMoveEnd.h  driver.cpp  driver.h  factorQR.cpp  factorQR.h  (+43 more)
src/old/pos_MPC_vel/: PositionMPCStepFunction.cpp  PositionMPCStepFunction.h  PositionMPCStepFunction_data.cpp  PositionMPCStepFunction_data.h  PositionMPCStepFunction_initialize.cpp  PositionMPCStepFunction_initialize.h  PositionMPCStepFunction_internal_types.h  PositionMPCStepFunction_terminate.cpp  PositionMPCStepFunction_terminate.h  PositionMPCStepFunction_types.h  PresolveWorkingSet.cpp  PresolveWorkingSet.h  RemoveDependentEq_.h  RemoveDependentIneq_.cpp  buildInfo.mat  checkStoppingAndUpdateFval.cpp  checkStoppingAndUpdateFval.h  computeFirstOrderOpt.cpp  computeFirstOrderOpt.h  computeFval.cpp  computeFval.h  computeFval_ReuseHx.h  computeGrad_StoreHx.cpp  computeQ_.cpp  compute_deltax.cpp  deleteColMoveEnd.cpp  deleteColMoveEnd.h  driver.cpp  eye.h  factorQR.cpp  feasibleratiotest.cpp  fullColLDL2_.cpp  iterate.cpp  iterate.h  loadProblem.cpp  loadProblem.h  modifyOverheadPhaseOne_.cpp  modifyOverheadPhaseOne_.h  phaseone.cpp  phaseone.h  (+15 more)
src/pos_MPC/: MPCStepFunction.cpp  MPCStepFunction.h  MPCStepFunction_data.h  MPCStepFunction_internal_types.h  MPCStepFunction_rtwutil.cpp  MPCStepFunction_rtwutil.h  MPCStepFunction_types.h  PositionMPCStepFunction.cpp  PositionMPCStepFunction_rtwutil.cpp  PresolveWorkingSet.cpp  RemoveDependentEq_.cpp  RemoveDependentIneq_.cpp  addBoundToActiveSetMatrix_.cpp  addBoundToActiveSetMatrix_.h  buildInfo.mat  checkStoppingAndUpdateFval.cpp  checkStoppingAndUpdateFval.h  computeFirstOrderOpt.cpp  computeFirstOrderOpt.h  computeFval.cpp  computeFval.h  computeFval_ReuseHx.cpp  computeFval_ReuseHx.h  computeGrad_StoreHx.cpp  computeGrad_StoreHx.h  computeQ_.cpp  computeQ_.h  compute_deltax.cpp  compute_deltax.h  countsort.cpp  countsort.h  defines.txt  deleteColMoveEnd.cpp  driver.cpp  driver.h  eye.cpp  factorQR.cpp  factorQR.h  feasibleX0ForWorkingSet.cpp  feasibleX0ForWorkingSet.h  (+29 more)
src/pos_MPC_tmp/: PositionMPCStepFunction.cpp  PositionMPCStepFunction.h  PositionMPCStepFunction_initialize.cpp  PositionMPCStepFunction_rtwutil.h  RemoveDependentIneq_.h  buildInfo.mat  computeFval.cpp  computeGrad_StoreHx.h  compute_deltax.h  countsort.cpp  driver.h  factorQR.h  feasibleX0ForWorkingSet.cpp  feasibleX0ForWorkingSet.h  feasibleratiotest.h  fullColLDL2_.h  linearForm_.h  maxConstraintViolation.cpp  partialColLDL3_.cpp  rt_nonfinite.cpp  rtw_proj.tmw  xgeqp3.cpp  xnrm2.h
